# supplypulse

./: .env.example  .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  docker-compose.yaml  pyproject.toml
.github/workflows/: ci.yml
.streamlit/: config.toml
app/: db.py  main.py  ui.py
app/pages/: overview.py  simulation.py
app/views/: demand.py  overview.py  simulation.py  vendors.py
dags/: daily_pipeline.py
docs/: DATA_LINEAGE.md  ERD_TRANSFORM.md  PRODUCTION_LOGIC.md  airflow_guide.md  architecture.md  dbt_model_design.md  dbt_tests_guide.md  sap_source_design.md  sap_source_design.xlsx  step_0_1_setup_windows.md  step_0_2_git_workflow.md  step_1_2_synthetic_data_plan.md  step_1_3_bronze_load_plan.md
docs/img/: architecture.excalidraw
docs/notes/: 01_uv_python_env.md  02_git_workflow.md  03_synthetic_data_logic.md  04_bronze_layer_concepts.md  05_dbt_concepts.md  06_docker_concepts.md  07_synthetic_data_v2_criteria.md
profiles/: profiles.yml
scripts/: generate_seed_transit_time.py  generate_synthetic_data.py  load_bronze.py
sql/bronze/: create_tables.sql
supplypulse_dbt/: README.md  dbt_project.yml
supplypulse_dbt/models/marts/: mart_consumption.sql  mart_detail_supply.sql  mart_inventory_simulation.sql  mart_shortage_report.sql  mart_vendor_performance.sql  schema.yml
supplypulse_dbt/models/staging/: schema.yml  sources.yml  stg_eket.sql  stg_ekko.sql  stg_ekpo.sql  stg_equk.sql  stg_equp.sql  stg_lfa1.sql  stg_likp.sql  stg_lips.sql  stg_marc.sql  stg_mard.sql  stg_resb.sql  stg_t001w.sql  stg_tfact.sql  stg_vbak.sql  stg_vbap.sql  stg_vbbe.sql  stg_vbup.sql
supplypulse_dbt/seeds/: seed_transit_time.csv
supplypulse_dbt/tests/: assert_otd_rate_between_0_and_1.sql  assert_shortage_red_days_not_negative.sql  assert_simulation_no_null_qty.sql  assert_tt_quota_max_tt_not_negative.sql
tests/: test_generate_synthetic_data.py
