[project]
name = "supplypulse"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "faker>=40.15.0",
    "openpyxl>=3.1.5",
    "pandas>=3.0.2",
]

[dependency-groups]
dev = [
    "black>=26.3.1",
    "pre-commit>=4.6.0",
    "pytest>=9.0.3",
    "ruff>=0.15.12",
]
[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM"]
ignore = ["E501"]   # line length

[tool.black]
line-length = 100
target-version = ["py311"]
