[project]
name = "supplypulse"
version = "0.1.0"
requires-python = ">=3.11,<3.14"
dependencies = [
    "dbt-core==1.9.4",
    "dbt-postgres==1.9.0",
    "faker>=40.15.0",
    "openpyxl>=3.1.5",
    "pandas>=3.0.2",
    "plotly>=6.8.0",
    "psycopg2-binary>=2.9.12",
    "python-dotenv>=1.2.2",
    "sqlalchemy>=2.0.49",
    "streamlit>=1.58.0",
]

[dependency-groups]
dev = [
    "black==25.12.0",
    "pre-commit>=4.6.0",
    "pytest>=9.0.3",
    "ruff>=0.15.12",
]
[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM"]
ignore = ["E501"]   # line length

[tool.black]
line-length = 100
target-version = ["py311"]
